# Docs/openapi-3.1.yml
@@ -798,7 +798,7 @@ paths:
                 $ref: '#/components/schemas/error'
 
 #ADMINISTRADOR
-  /administrador/lista_users:
+  /lista_usuario:
     get:
       summary: 'Retorna todos os usuários cadastrado no sistema'
       operationId:  'getAllUsers'
@@ -818,7 +818,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /cadastro_user:
+  /cadastro_usuario:
     post:
       summary: 'Cadastra um novo usuário no sistema'
       operationId: 'create_user'
@@ -858,7 +858,7 @@ paths:
                 schema:
                   $ref: '#/components/schemas/Error'
 
-  /administrador/cadastro_user/{id_user}:
+  /edicao_usuario/{id_user}:
     put:
       summary: 'Atualiza os dados de um usuário do sistema'
       operationId: update_user'
